--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "linktree-landing-page-clone",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a linktree landing page clone",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nidal0/linktree-landing-page-clone.git"
+  },
+  "author": "Nidal Abrar",
+  "license": "WTFPL",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
